# CuratorKIT

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: release.py
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/community/changelog/: index.html
0.1/community/contributing/: index.html
0.1/community/faq/: index.html
0.1/community/roadmap/: index.html
0.1/getting-started/: index.html
0.1/getting-started/installation/: index.html
0.1/getting-started/outputs/: index.html
0.1/getting-started/quickstart/: index.html
0.1/guides/: index.html
0.1/guides/adaptive-recovery/: index.html
0.1/guides/customisation/: index.html
0.1/guides/data-hygiene/: index.html
0.1/guides/data-sources/: index.html
0.1/guides/exporters/: index.html
0.1/guides/generation/: index.html
0.1/guides/quality-gates/: index.html
0.1/guides/train-with-aligntune/: index.html
0.1/reference/: index.html
0.1/reference/api/: index.html
0.1/reference/architecture/: index.html
0.1/reference/cli/: index.html
0.1/reference/configuration/: index.html
0.1/search/: search_index.json
0.1/tutorials/: index.html
1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0/community/changelog/: index.html
1.0/community/contributing/: index.html
1.0/community/faq/: index.html
1.0/community/roadmap/: index.html
1.0/getting-started/: index.html
1.0/getting-started/installation/: index.html
1.0/getting-started/outputs/: index.html
1.0/getting-started/quickstart/: index.html
1.0/guides/: index.html
1.0/guides/adaptive-recovery/: index.html
1.0/guides/customisation/: index.html
1.0/guides/data-hygiene/: index.html
1.0/guides/data-sources/: index.html
1.0/guides/exporters/: index.html
1.0/guides/generation/: index.html
1.0/guides/quality-gates/: index.html
1.0/guides/train-with-aligntune/: index.html
1.0/reference/: index.html
1.0/reference/api/: index.html
1.0/reference/architecture/: index.html
1.0/reference/cli/: index.html
1.0/reference/configuration/: index.html
1.0/search/: search_index.json
1.0/tutorials/: index.html
assets/: extra.js
community/changelog/: index.html
community/contributing/: index.html
community/faq/: index.html
community/roadmap/: index.html
curatorkit/: __init__.py  cli.py  config.py  curator.py  interfaces.py  manifest.py  pipeline.py  schema.py
curatorkit/connectors/: __init__.py  base.py  csv_reader.py  huggingface.py  json_reader.py  jsonl.py  parquet_reader.py  pdf.py
curatorkit/detection/: __init__.py  detector.py  normalizer.py
curatorkit/diagnostic/: __init__.py  diagnostics.py  failure_modes.py  pass2.py  probe.py  retriever.py  reward_refine.py
curatorkit/exporters/: __init__.py  alpaca.py  corpus.py  dpo.py  grpo.py  ppo.py  sharegpt.py
curatorkit/gates/: __init__.py  diversity.py  hallucination.py  reward.py  schema.py
curatorkit/generators/: __init__.py  adversarial_preference.py  adversarial_qa_generator.py  base.py  cot_generator.py  evol_instruct.py  grpo_rollout.py  injector.py  multiturn_gen.py  preference_gen.py  qa_generator.py
curatorkit/hygiene/: __init__.py  pii.py  secrets.py  toxicity.py
curatorkit/llm/: __init__.py  base.py  litellm.py  ollama.py
curatorkit/normalizers/: __init__.py  clean.py  dedup.py  embedding_dedup.py  sample.py  truncate.py
curatorkit/tools/: setup_mineru.py
curatorkit/utils/: tokens.py
docs/: index.md
docs/assets/: extra.css
docs/community/: contributing.md  faq.md  roadmap.md
docs/getting-started/: index.md  installation.md  outputs.md  quickstart.md
docs/guides/: adaptive-recovery.md  customisation.md  data-hygiene.md  data-sources.md  exporters.md  generation.md  index.md  quality-gates.md  train-with-aligntune.md
docs/reference/: architecture.md  cli.md  configuration.md  index.md
docs/reference/api/: connectors.md  curator.md  detection.md  diagnostic.md  exporters.md  gates.md  generators.md  hygiene.md  index.md  interfaces.md  llm.md  manifest.md  normalizers.md  pipeline.md  schema.md
docs/tutorials/: index.md
examples/: README.md  adaptive_recovery.py  clean_and_dedup.py  generate_dpo_pairs.py  generate_sft_from_pdf.py  hygiene_pipeline.py  multi_source_ingest.py
examples/quickstart/: README.md  pipeline.yaml  seed_data.jsonl
getting-started/: index.html
getting-started/installation/: index.html
getting-started/outputs/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/adaptive-recovery/: index.html
guides/customisation/: index.html
guides/data-hygiene/: index.html
guides/data-sources/: index.html
guides/exporters/: index.html
guides/generation/: index.html
guides/quality-gates/: index.html
guides/train-with-aligntune/: index.html
notebooks/: 01_generate_sft_dataset.ipynb  02_generate_dpo_pairs.ipynb  03_generate_grpo_rollouts.ipynb  04_ingest_multiple_sources.ipynb  05_clean_and_dedup.ipynb  06_adaptive_recovery.ipynb  07_adversarial_generation.ipynb  08_data_hygiene_pipeline.ipynb  09_corpus_filtered_vs_unfiltered_ft.ipynb
reference/: index.html
reference/api/: index.html
reference/api/connectors/: index.html
reference/api/curator/: index.html
reference/api/detection/: index.html
reference/architecture/: index.html
reference/cli/: index.html
reference/configuration/: index.html
tests/integration/: test_trl.py
tests/unit/: test_connectors.py  test_dedup.py  test_detector.py  test_diagnostics.py  test_export_guards.py  test_failure_modes.py  test_hygiene.py  test_jsonl_reader.py  test_pass2.py  test_pdf_chunker.py  test_pipeline.py  test_pipeline_probe_integration.py  test_probe.py  test_schema.py  test_schema_gate.py  test_text_cleaner.py
tutorials/: index.html
(+39 files in other folders)
